--- a/portfolio.html
+++ b/portfolio.html
@@ -24,43 +24,32 @@
 
     <main>
         <h2>Portfolio</h2>
-        <div>
-            <div class="row">
-                <div class="column">
-                    <div class="container">
-                        <div id="text1">Shakespeare Club</div>
-                        <img id="prtimg1" src="assets/images/D01 Sign-up page 1.png" />
+            <section class="cards">
+                <article>
+                    <img class="article-img" src="assets/images/D01 Sign-up page 1.png" alt=" ">
+                    <div class="article-title">
+                        Shakespeare Club
                     </div>
-                </div>
-                <div class="column">
-                    <div class="container">
-                        <div id="text2">Credit Card Checkout</div>
-                        <img id="prtimg2" src="assets/images/D02 Credit Card Checkout.png" />
+                </article>
+                <article>
+                    <img class="article-img" src="assets/images/D02 Credit Card Checkout.png" alt=" ">
+                    <div class="article-title">
+                        Credit Card Checkout
                     </div>
-                </div>
-                <div class="column">
-                    <div class="container">
-                        <div id="text3">Calorie Calculator</div>
-                        <img id="prtimg3" src="assets/images/D04 Calculator.png" />
+                </article>
+                <article>
+                    <img class="article-img" src="assets/images/D04 Calculator.png" alt=" ">
+                    <div class="article-title">
+                        Calorie Calculator
                     </div>
-                </div>
-                <!-- </div>
-            <div class="row"> -->
-                <div class="column">
-                    <div class="container">
-                        <div id="text4">PetMet</div>
-                        <img id="prtimg4" src="assets/images/D06 User Profile Mockup.png" />
+                </article>
+                <article>
+                    <img class="article-img" src="assets/images/D06 User Profile Mockup.png" alt=" ">
+                    <div class="article-title">
+                        PetMet
                     </div>
-                </div>
-                <div class="column">
-                    <div class="container">
-                        <div id="text5">Smart Clock</div>
-                        <img id="prtimg5" src="assets/images/D07 Setting.png" />
-                    </div>
-                </div>
-                <div class="column"></div>
-            </div>
-        </div>
+                </article>
+            </section>
     </main>
 
     <footer>
