--- a/portfolio.html
+++ b/portfolio.html
@@ -49,6 +49,30 @@
                         PetMet
                     </div>
                 </article>
+                <article>
+                    <img class="article-img" src="assets/images/D07 Setting.png" alt=" ">
+                    <div class="article-title">
+                        Smart Clock
+                    </div>
+                </article>
+                <article>
+                    <img class="article-img" src="assets/images/D08 404.png" alt=" ">
+                    <div class="article-title">
+                        404 Page
+                    </div>
+                </article>
+                <article>
+                    <img class="article-img" src="assets/images/D09 Music Player.png" alt=" ">
+                    <div class="article-title">
+                        Music Player
+                    </div>
+                </article>
+                <article>
+                    <img class="article-img" src="assets/images/D10 Social Share Icon.png" alt=" ">
+                    <div class="article-title">
+                        Social Sharing Icon
+                    </div>
+                </article>
             </section>
     </main>
 
