--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main>
         <h2>About Me</h2>
-        <img src="assets/images/Yuwen.jpg" alt="YuwenLi" style="width:200px;height:200px;" id="imgyuwen">
+        <img src="assets/images/Yuwen.jpg" alt="YuwenLi" id="imgyuwen">
 
         <p>
             Growing up in a family of an architect and a civil engineer, I have closely witnessed the value and power
