--- a/contact.html
+++ b/contact.html
@@ -26,14 +26,14 @@
         <h2>Contact</h2>
         <div id="contactp">
             <p>Name</p>
-            <p id="name">John Smith</p>
+            <input id="name" type="text" name="FirstName">
             <p>Email</p>
-            <p id="email">example@gmail.com</p>
+            <input id="email" type="text" name="FirstName">
             <p>Message</p>
-            <div id="fillarea"></div>
+            <input id="fillarea" type="text" name="FirstName>
         </div>
         <div id="submit">
-            Submit
+            <input type="submit" value="Submit">
         </div>
 
     </main>
