--- a/portfolio.html
+++ b/portfolio.html
@@ -24,56 +24,65 @@
 
     <main>
         <h2>Portfolio</h2>
-            <section class="cards">
-                <article>
-                    <img class="article-img" src="assets/images/D01 Sign-up page 1.png" alt=" ">
-                    <div class="article-title">
-                        Shakespeare Club
-                    </div>
-                </article>
-                <article>
-                    <img class="article-img" src="assets/images/D02 Credit Card Checkout.png" alt=" ">
-                    <div class="article-title">
-                        Credit Card Checkout
-                    </div>
-                </article>
-                <article>
-                    <img class="article-img" src="assets/images/D04 Calculator.png" alt=" ">
-                    <div class="article-title">
-                        Calorie Calculator
-                    </div>
-                </article>
-                <article>
-                    <img class="article-img" src="assets/images/D06 User Profile Mockup.png" alt=" ">
-                    <div class="article-title">
-                        PetMet
-                    </div>
-                </article>
-                <article>
-                    <img class="article-img" src="assets/images/D07 Setting.png" alt=" ">
-                    <div class="article-title">
-                        Smart Clock
-                    </div>
-                </article>
-                <article>
-                    <img class="article-img" src="assets/images/D08 404.png" alt=" ">
-                    <div class="article-title">
-                        404 Page
-                    </div>
-                </article>
-                <article>
-                    <img class="article-img" src="assets/images/D09 Music Player.png" alt=" ">
-                    <div class="article-title">
-                        Music Player
-                    </div>
-                </article>
-                <article>
-                    <img class="article-img" src="assets/images/D10 Social Share Icon.png" alt=" ">
-                    <div class="article-title">
-                        Social Sharing Icon
-                    </div>
-                </article>
-            </section>
+        <section class="cards">
+            <article>
+                <img class="article-img" src="assets/images/D01 Sign-up page 1.png" alt=" ">
+                <div class="article-title">
+                    Shakespeare Club
+                </div>
+            </article>
+            <article>
+                <img class="article-img" src="assets/images/D02 Credit Card Checkout.png" alt=" ">
+                <div class="article-title">
+                    Credit Card Checkout
+                </div>
+            </article>
+            <article>
+                <img class="article-img" src="assets/images/D04 Calculator.png" alt=" ">
+                <div class="article-title">
+                    Calorie Calculator
+                </div>
+            </article>
+            <article>
+                <img class="article-img" src="assets/images/D06 User Profile Mockup.png" alt=" ">
+                <div class="article-title">
+                    PetMet
+                </div>
+            </article>
+            <article>
+                <img class="article-img" src="assets/images/D07 Setting.png" alt=" ">
+                <div class="article-title">
+                    Smart Clock
+                </div>
+            </article>
+            <article>
+                <img class="article-img" src="assets/images/D08 404.png" alt=" ">
+                <div class="article-title">
+                    404 Page
+                </div>
+            </article>
+            <article>
+                <img class="article-img" src="assets/images/D09 Music Player.png" alt=" ">
+                <div class="article-title">
+                    Music Player
+                </div>
+            </article>
+            <article>
+                <img class="article-img" src="assets/images/D10 Social Share Icon.png" alt=" ">
+                <div class="article-title">
+                    Social Sharing Icon
+                </div>
+            </article>
+            <article>
+                <a href="https://muzlee1113.github.io/Word-Guess-Game/">
+                    <img class="article-img" src="assets/images/D00 Guessword Game.png" alt=" ">
+                </a>
+                <div class="article-title">
+                    One Piece Hangman Game
+                </div>
+            </article>
+
+        </section>
     </main>
 
     <footer>
