--- a/portfolio.html
+++ b/portfolio.html
@@ -68,17 +68,19 @@
                 </div>
             </article>
             <article>
-                <img class="article-img" src="assets/images/D10 Social Share Icon.png" alt=" ">
-                <div class="article-title">
-                    Social Sharing Icon
-                </div>
-            </article>
-            <article>
                 <a href="https://muzlee1113.github.io/Word-Guess-Game/">
                     <img class="article-img" src="assets/images/D00 Guessword Game.png" alt=" ">
                 </a>
                 <div class="article-title">
                     One Piece Hangman Game
+                </div>
+            </article>
+            <article>
+                <a href="https://muzlee1113.github.io/unit-4-game/">
+                    <img class="article-img" src="assets/images/D00 Gem Miner.png" alt=" ">
+                </a>
+                <div class="article-title">
+                    Gem Miner Game
                 </div>
             </article>
 
