add trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,48 +26,6 @@
         <h2>Portfolio</h2>
         <section class="cards">
             <article>
-                <img class="article-img" src="assets/images/D01 Sign-up page 1.png" alt=" ">
-                <div class="article-title">
-                    Shakespeare Club
-                </div>
-            </article>
-            <article>
-                <img class="article-img" src="assets/images/D02 Credit Card Checkout.png" alt=" ">
-                <div class="article-title">
-                    Credit Card Checkout
-                </div>
-            </article>
-            <article>
-                <img class="article-img" src="assets/images/D04 Calculator.png" alt=" ">
-                <div class="article-title">
-                    Calorie Calculator
-                </div>
-            </article>
-            <article>
-                <img class="article-img" src="assets/images/D06 User Profile Mockup.png" alt=" ">
-                <div class="article-title">
-                    PetMet
-                </div>
-            </article>
-            <article>
-                <img class="article-img" src="assets/images/D07 Setting.png" alt=" ">
-                <div class="article-title">
-                    Smart Clock
-                </div>
-            </article>
-            <article>
-                <img class="article-img" src="assets/images/D08 404.png" alt=" ">
-                <div class="article-title">
-                    404 Page
-                </div>
-            </article>
-            <article>
-                <img class="article-img" src="assets/images/D09 Music Player.png" alt=" ">
-                <div class="article-title">
-                    Music Player
-                </div>
-            </article>
-            <article>
                 <a href="https://muzlee1113.github.io/Word-Guess-Game/">
                     <img class="article-img" src="assets/images/D00 Guessword Game.png" alt=" ">
                 </a>
@@ -81,6 +39,14 @@
                 </a>
                 <div class="article-title">
                     Gem Miner Game
+                </div>
+            </article>
+            <article>
+                <a href="https://muzlee1113.github.io/TriviaGame/">
+                    <img class="article-img" src="assets/images/D00 Trivia Game.png" alt=" ">
+                </a>
+                <div class="article-title">
+                    Trivia Game
                 </div>
             </article>
 
