--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,14 @@
                     Trivia Game
                 </div>
             </article>
-
+            <article>
+                <a href="https://muzlee1113.github.io/GifTastic/">
+                    <img class="article-img" src="assets/images/D00 Giftastic.png" alt=" ">
+                </a>
+                <div class="article-title">
+                    GifTastic
+                </div>
+            </article>
         </section>
     </main>
 
