heroku links update

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
         <h2>Portfolio</h2>
         <section class="cards">
             <article>
-                <a href="https://muzlee1113.github.io/Word-Guess-Game/">
+                <a href="https://onepiecehangmangame.herokuapp.com/index.html">
                     <img class="article-img" src="assets/images/D00 Guessword Game.png" alt=" ">
                 </a>
                 <div class="article-title">
@@ -35,15 +35,7 @@
                 </div>
             </article>
             <article>
-                <a href="https://muzlee1113.github.io/unit-4-game/">
-                    <img class="article-img" src="assets/images/D00 Gem Miner.png" alt=" ">
-                </a>
-                <div class="article-title">
-                    Gem Miner Game
-                </div>
-            </article>
-            <article>
-                <a href="https://muzlee1113.github.io/TriviaGame/">
+                <a href="https://worldwidetrivia.herokuapp.com/index.html">
                     <img class="article-img" src="assets/images/D00 Trivia Game.png" alt=" ">
                 </a>
                 <div class="article-title">
@@ -51,7 +43,7 @@
                 </div>
             </article>
             <article>
-                <a href="https://muzlee1113.github.io/GifTastic/">
+                <a href="https://giftasticpage.herokuapp.com/index.html">
                     <img class="article-img" src="assets/images/D00 Giftastic.png" alt=" ">
                 </a>
                 <div class="article-title">
@@ -59,11 +51,19 @@
                 </div>
             </article>
             <article>
-                <a href="https://muzlee1113.github.io/Train-schedule-bonus/">
+                <a href="https://trainspottingpage.herokuapp.com/index.html">
                     <img class="article-img" src="assets/images/D00 Transpotting.png" alt=" ">
                 </a>
                 <div class="article-title">
                     Trainspotting
+                </div>
+            </article>
+            <article>
+                <a href="https://giphy-to-me.herokuapp.com/index.html">
+                    <img class="article-img" src="assets/images/D00 Giphytome.png" alt=" ">
+                </a>
+                <div class="article-title">
+                    GiphyToMe
                 </div>
             </article>
         </section>
