--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                         </div>
                     </div>
                 </a>
+                <a href="https://github.com/muzlee1113/Word-Guess-Game">
+                    <img class="code" src="assets/images/code.png" alt=" ">
+                </a>
             </article>
             <article>
                 <a href="https://worldwidetrivia.herokuapp.com/index.html">
@@ -59,6 +62,9 @@
                             </div>
                         </div>
                     </div>
+                </a>
+                <a href="https://github.com/muzlee1113/TriviaGame">
+                    <img class="code" src="assets/images/code.png" alt=" ">
                 </a>
             </article>
             <article>
@@ -75,6 +81,9 @@
                         </div>
                     </div>
                 </a>
+                <a href="https://github.com/muzlee1113/GifTastic">
+                    <img class="code" src="assets/images/code.png" alt=" ">
+                </a>
             </article>
             <article>
                 <a href="https://trainspottingpage.herokuapp.com/index.html">
@@ -90,6 +99,9 @@
                         </div>
                     </div>
                 </a>
+                <a href="https://github.com/muzlee1113/Train-schedule-bonus">
+                    <img class="code" src="assets/images/code.png" alt=" ">
+                </a>
             </article>
             <article>
                 <a href="https://giphy-to-me.herokuapp.com/index.html">
@@ -104,6 +116,9 @@
                             </div>
                         </div>
                     </div>
+                </a>
+                <a href="https://github.com/cvanglee/House-Martell">
+                    <img class="code" src="assets/images/code.png" alt=" ">
                 </a>
             </article>
         </section>
