--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="leading">
             <p class="leading-bigtext">Hi, I<span class="leading-bigtext" style="color: #DB696A">’</span>m Yuwen Li<span
                     class="leading-bigtext" style="color: #DB696A">.</span></p>
-            <p class="leading-text">UX Designer & Developer</p>
+            <p class="leading-text">UX Designer & Developer.√</p>
         </section>
         <section class="cards">
             <article>
