--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="leading">
             <p class="leading-bigtext">Hi, I<span class="leading-bigtext" style="color: #DB696A">’</span>m Yuwen Li<span
                     class="leading-bigtext" style="color: #DB696A">.</span></p>
-            <p class="leading-text">UX Designer & Developer.√</p>
+            <p class="leading-text">UX Designer & Developer.</p>
         </section>
         <section class="cards">
             <article>
@@ -125,12 +125,30 @@
                 <a href="https://drive.google.com/file/d/1Mf1upAAAR5FbwtBLMYdhdRar7QD86CRD/view">
                     <div class="cardcontainer">
                         <img class="article-img" src="assets/images/D00 Liri.png" alt=" ">
-                        <div class="overlay" id="img5">
+                        <div class="overlay" id="img6">
                             <div class="article-title">
                                 Liri
                             </div>
                             <div class="article-subtitle">
                                 Javascript | Node | APIs
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/muzlee1113/liri-node-app">
+                    <img class="code" src="assets/images/code.png" alt=" ">
+                </a>
+            </article>
+            <article>
+                <a href="https://drive.google.com/file/d/1Mf1upAAAR5FbwtBLMYdhdRar7QD86CRD/view">
+                    <div class="cardcontainer">
+                        <img class="article-img" src="assets/images/D00 NBA Word Guess Game.png" alt=" ">
+                        <div class="overlay" id="img7">
+                            <div class="article-title">
+                                NBA Word Guess Game
+                            </div>
+                            <div class="article-subtitle">
+                                Javascript | Node 
                             </div>
                         </div>
                     </div>
