--- a/index.html
+++ b/index.html
@@ -157,6 +157,24 @@
                     <img class="code" src="assets/images/code.png" alt=" ">
                 </a>
             </article>
+            <article>
+                <a href="https://drive.google.com/open?id=1PDLzrk75R6gNyPMB3-_W_WywX-euxVJa">
+                    <div class="cardcontainer">
+                        <img class="article-img" src="assets/images/D00 Bamazon.png" alt=" ">
+                        <div class="overlay" id="img8">
+                            <div class="article-title">
+                                Bamazon
+                            </div>
+                            <div class="article-subtitle">
+                                Javascript | Node | MySQL
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/muzlee1113/bamazon">
+                    <img class="code" src="assets/images/code.png" alt=" ">
+                </a>
+            </article>
         </section>
     </main>
 
