--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             <p>Email</p>
             <input id="email" type="text" name="FirstName">
             <p>Message</p>
-            <input id="fillarea" type="text" name="FirstName>
+            <input id="fillarea" type="text" name="FirstName">
         </div>
         <div id="submit">
             <input type="submit" value="Submit">
