--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
                     <div class="cardcontainer">
                         <img class="article-img" src="assets/images/D00 Liri.png" alt=" ">
                         <div class="overlay" id="img6">
-                            <div class="article-title">
+                            <div class="article-title" style="color:black">
                                 Liri
                             </div>
-                            <div class="article-subtitle">
+                            <div class="article-subtitle" style="color:black">
                                 Javascript | Node | APIs
                             </div>
                         </div>
@@ -172,6 +172,24 @@
                     </div>
                 </a>
                 <a href="https://github.com/muzlee1113/bamazon">
+                    <img class="code" src="assets/images/code.png" alt=" ">
+                </a>
+            </article>
+            <article>
+                <a href="https://findfriendbyyuwen.herokuapp.com/">
+                    <div class="cardcontainer">
+                        <img class="article-img" src="assets/images/D00 Friend Finder.png" alt=" ">
+                        <div class="overlay" id="img9">
+                            <div class="article-title" style="color:black">
+                                Friend Finder
+                            </div>
+                            <div class="article-subtitle" style="color:black">
+                                Javascript | Node | MySQL | Express
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/muzlee1113/friendFinder">
                     <img class="code" src="assets/images/code.png" alt=" ">
                 </a>
             </article>
