--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 Bamazon
                             </div>
                             <div class="article-subtitle">
-                                Javascript | Node | MySQL
+                                Node.js | MySQL
                             </div>
                         </div>
                     </div>
@@ -184,12 +184,30 @@
                                 Friend Finder
                             </div>
                             <div class="article-subtitle" style="color:black">
-                                Javascript | Node | MySQL | Express
+                                Node.js | MySQL | Express
                             </div>
                         </div>
                     </div>
                 </a>
                 <a href="https://github.com/muzlee1113/friendFinder">
+                    <img class="code" src="assets/images/code.png" alt=" ">
+                </a>
+            </article>
+            <article>
+                <a href="https://eatdaburgerbyyuwen.herokuapp.com/">
+                    <div class="cardcontainer">
+                        <img class="article-img" src="assets/images/D00 EatDaBurger.png" alt=" ">
+                        <div class="overlay" id="img10">
+                            <div class="article-title" style="color:black">
+                                Eat-Da-Burger!
+                            </div>
+                            <div class="article-subtitle" style="color:black">
+                                Node.js | MySQL | Express | Handlebars
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/muzlee1113/burger">
                     <img class="code" src="assets/images/code.png" alt=" ">
                 </a>
             </article>
