--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 </a>
             </article>
             <article>
-                <a href="https://eatdaburgerbyyuwen.herokuapp.com/">
+                <a href="https://sequelizeburgerbyyuwen.herokuapp.com/">
                     <div class="cardcontainer">
                         <img class="article-img" src="assets/images/D00 EatDaBurger.png" alt=" ">
                         <div class="overlay" id="img10">
@@ -207,7 +207,28 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://github.com/muzlee1113/burger">
+                <a href="https://github.com/muzlee1113/sequelizedBurger">
+                    <img class="code" src="assets/images/code.png" alt=" ">
+                </a>
+            </article>
+            <article>
+                <a href="https://pet-park.herokuapp.com/">
+                    <div class="cardcontainer">
+                        <img class="article-img" src="assets/images/D00 Petpark.png" alt=" ">
+                        <div class="overlay" id="img11">
+                            <div class="article-title">
+                                Pet Park
+                            </div>
+                            <div class="article-subtitle">
+                                Node.js | Express | Handlebars
+                            </div>
+                            <div class="article-subtitle" style="top: 60%">
+                                MySQL | Sequelize
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href=" https://github.com/JoshVanOverbeke/Project2">
                     <img class="code" src="assets/images/code.png" alt=" ">
                 </a>
             </article>
