--- a/index.html
+++ b/index.html
@@ -228,7 +228,28 @@
                         </div>
                     </div>
                 </a>
-                <a href=" https://github.com/JoshVanOverbeke/Project2">
+                <a href="https://github.com/JoshVanOverbeke/Project2">
+                    <img class="code" src="assets/images/code.png" alt=" ">
+                </a>
+            </article>
+            <article>
+                <a href="https://digestnewsbyyuwen.herokuapp.com/">
+                    <div class="cardcontainer">
+                        <img class="article-img" src="assets/images/D00 Newsdigest.png" alt=" ">
+                        <div class="overlay" id="img12">
+                            <div class="article-title">
+                                News Digest
+                            </div>
+                            <div class="article-subtitle">
+                                Node.js | Express | Handlebars
+                            </div>
+                            <div class="article-subtitle" style="top: 60%">
+                                MongoDB | Mongoose
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/muzlee1113/newsdigest">
                     <img class="code" src="assets/images/code.png" alt=" ">
                 </a>
             </article>
